{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 1049,
  "lineage": "190a2448-3451-d006-0f1c-cf82c9ee4886",
  "resources": [
    {
      "module": "module.Load_balancer",
      "mode": "managed",
      "type": "aws_lb",
      "name": "private_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:851725226081:loadbalancer/app/Private-Load-Balancer/05af69c014dc7ed5",
            "arn_suffix": "app/Private-Load-Balancer/05af69c014dc7ed5",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-Private-Load-Balancer-308533399.eu-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-2:851725226081:loadbalancer/app/Private-Load-Balancer/05af69c014dc7ed5",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "Private-Load-Balancer",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0bc1534aac60f3dc5",
              "sg-0c7394aa96648d4e1",
              "sg-0f9a7a502d12baa13",
              "sg-0fa5288f357d99992"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-024aa0a3b629f9183"
              },
              {
                "subnet_id": "subnet-0abbf7986e6f2279c"
              },
              {
                "subnet_id": "subnet-0da7a3b87880e2796"
              }
            ],
            "subnets": [
              "subnet-024aa0a3b629f9183",
              "subnet-0abbf7986e6f2279c",
              "subnet-0da7a3b87880e2796"
            ],
            "vpc_id": "vpc-0878b8a97521edac1",
            "xff_header_processing_mode": "append",
            "zone_id": "ZHURV8PSTC4K8"
          },
          "dependencies": [
            "module.security.aws_security_group.allow_egress",
            "module.security.aws_security_group.allow_http",
            "module.security.aws_security_group.allow_https",
            "module.security.aws_security_group.allow_ssh",
            "module.vpc.aws_subnet.Project_private_subnets",
            "module.vpc.aws_vpc.Project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Load_balancer",
      "mode": "managed",
      "type": "aws_lb",
      "name": "public_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:851725226081:loadbalancer/app/Public-Load-Balancer/b1c964bcf78788de",
            "arn_suffix": "app/Public-Load-Balancer/b1c964bcf78788de",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "Public-Load-Balancer-1134569462.eu-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-2:851725226081:loadbalancer/app/Public-Load-Balancer/b1c964bcf78788de",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "Public-Load-Balancer",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0bc1534aac60f3dc5",
              "sg-0c7394aa96648d4e1",
              "sg-0f9a7a502d12baa13",
              "sg-0fa5288f357d99992"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-04986d9ccf105c360"
              },
              {
                "subnet_id": "subnet-0ad1b355d588880d0"
              },
              {
                "subnet_id": "subnet-0b6dec183804adc01"
              }
            ],
            "subnets": [
              "subnet-04986d9ccf105c360",
              "subnet-0ad1b355d588880d0",
              "subnet-0b6dec183804adc01"
            ],
            "vpc_id": "vpc-0878b8a97521edac1",
            "xff_header_processing_mode": "append",
            "zone_id": "ZHURV8PSTC4K8"
          },
          "dependencies": [
            "module.security.aws_security_group.allow_egress",
            "module.security.aws_security_group.allow_http",
            "module.security.aws_security_group.allow_https",
            "module.security.aws_security_group.allow_ssh",
            "module.vpc.aws_subnet.Project_public_subnets",
            "module.vpc.aws_vpc.Project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Load_balancer",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "private_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:851725226081:listener/app/Private-Load-Balancer/05af69c014dc7ed5/28457a789ab03179",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:851725226081:targetgroup/auth-private/1fb10adfb8780996",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:851725226081:listener/app/Private-Load-Balancer/05af69c014dc7ed5/28457a789ab03179",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-2:851725226081:loadbalancer/app/Private-Load-Balancer/05af69c014dc7ed5",
            "mutual_authentication": [],
            "port": 3000,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Load_balancer.aws_lb.private_lb",
            "module.Load_balancer.aws_lb_target_group.auth_tg_private",
            "module.security.aws_security_group.allow_egress",
            "module.security.aws_security_group.allow_http",
            "module.security.aws_security_group.allow_https",
            "module.security.aws_security_group.allow_ssh",
            "module.vpc.aws_subnet.Project_private_subnets",
            "module.vpc.aws_vpc.Project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Load_balancer",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "public_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:851725226081:listener/app/Public-Load-Balancer/b1c964bcf78788de/99943a27cea00a31",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:851725226081:targetgroup/Lighting/51876189ced42439",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:851725226081:listener/app/Public-Load-Balancer/b1c964bcf78788de/99943a27cea00a31",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-2:851725226081:loadbalancer/app/Public-Load-Balancer/b1c964bcf78788de",
            "mutual_authentication": [],
            "port": 3000,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Load_balancer.aws_lb.public_lb",
            "module.Load_balancer.aws_lb_target_group.lighting_tg",
            "module.security.aws_security_group.allow_egress",
            "module.security.aws_security_group.allow_http",
            "module.security.aws_security_group.allow_https",
            "module.security.aws_security_group.allow_ssh",
            "module.vpc.aws_subnet.Project_public_subnets",
            "module.vpc.aws_vpc.Project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Load_balancer",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "heating_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:851725226081:targetgroup/Heating/f3d6cf38dbca94aa",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:851725226081:listener-rule/app/Public-Load-Balancer/b1c964bcf78788de/99943a27cea00a31/ec877729d3cba0e2",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/api/heating"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:851725226081:listener-rule/app/Public-Load-Balancer/b1c964bcf78788de/99943a27cea00a31/ec877729d3cba0e2",
            "listener_arn": "arn:aws:elasticloadbalancing:eu-west-2:851725226081:listener/app/Public-Load-Balancer/b1c964bcf78788de/99943a27cea00a31",
            "priority": 95,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Load_balancer.aws_lb.public_lb",
            "module.Load_balancer.aws_lb_listener.public_listener",
            "module.Load_balancer.aws_lb_target_group.heating_tg",
            "module.Load_balancer.aws_lb_target_group.lighting_tg",
            "module.security.aws_security_group.allow_egress",
            "module.security.aws_security_group.allow_http",
            "module.security.aws_security_group.allow_https",
            "module.security.aws_security_group.allow_ssh",
            "module.vpc.aws_subnet.Project_public_subnets",
            "module.vpc.aws_vpc.Project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Load_balancer",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "status_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:851725226081:targetgroup/Status/3179c1b42b6efead",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:851725226081:listener-rule/app/Public-Load-Balancer/b1c964bcf78788de/99943a27cea00a31/554a589d0cf6aad8",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/api/status"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:851725226081:listener-rule/app/Public-Load-Balancer/b1c964bcf78788de/99943a27cea00a31/554a589d0cf6aad8",
            "listener_arn": "arn:aws:elasticloadbalancing:eu-west-2:851725226081:listener/app/Public-Load-Balancer/b1c964bcf78788de/99943a27cea00a31",
            "priority": 90,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Load_balancer.aws_lb.public_lb",
            "module.Load_balancer.aws_lb_listener.public_listener",
            "module.Load_balancer.aws_lb_target_group.lighting_tg",
            "module.Load_balancer.aws_lb_target_group.status_tg",
            "module.security.aws_security_group.allow_egress",
            "module.security.aws_security_group.allow_http",
            "module.security.aws_security_group.allow_https",
            "module.security.aws_security_group.allow_ssh",
            "module.vpc.aws_subnet.Project_public_subnets",
            "module.vpc.aws_vpc.Project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "auth_tg_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:851725226081:targetgroup/auth-private/1fb10adfb8780996",
            "arn_suffix": "targetgroup/auth-private/1fb10adfb8780996",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/api/auth",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:851725226081:targetgroup/auth-private/1fb10adfb8780996",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:eu-west-2:851725226081:loadbalancer/app/Private-Load-Balancer/05af69c014dc7ed5"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "auth-private",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0878b8a97521edac1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.Project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "heating_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:851725226081:targetgroup/Heating/f3d6cf38dbca94aa",
            "arn_suffix": "targetgroup/Heating/f3d6cf38dbca94aa",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/api/heating/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:851725226081:targetgroup/Heating/f3d6cf38dbca94aa",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:eu-west-2:851725226081:loadbalancer/app/Public-Load-Balancer/b1c964bcf78788de"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "Heating",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0878b8a97521edac1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.Project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "lighting_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:851725226081:targetgroup/Lighting/51876189ced42439",
            "arn_suffix": "targetgroup/Lighting/51876189ced42439",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/api/lights/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:851725226081:targetgroup/Lighting/51876189ced42439",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:eu-west-2:851725226081:loadbalancer/app/Public-Load-Balancer/b1c964bcf78788de"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "Lighting",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0878b8a97521edac1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.Project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "status_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:851725226081:targetgroup/Status/3179c1b42b6efead",
            "arn_suffix": "targetgroup/Status/3179c1b42b6efead",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/api/status/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:851725226081:targetgroup/Status/3179c1b42b6efead",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:eu-west-2:851725226081:loadbalancer/app/Public-Load-Balancer/b1c964bcf78788de"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "Status",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0878b8a97521edac1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.Project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "Auth_attachment_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-2:851725226081:targetgroup/auth-private/1fb10adfb8780996-20240307135626830500000007",
            "port": 3000,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:851725226081:targetgroup/auth-private/1fb10adfb8780996",
            "target_id": "i-0b696a85d8003011f"
          },
          "dependencies": [
            "module.Load_balancer.aws_lb_target_group.auth_tg_private",
            "module.Servers.aws_instance.auth_instance",
            "module.security.aws_security_group.allow_egress",
            "module.security.aws_security_group.allow_http",
            "module.security.aws_security_group.allow_https",
            "module.security.aws_security_group.allow_ssh",
            "module.vpc.aws_subnet.Project_private_subnets",
            "module.vpc.aws_vpc.Project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "Heating_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-2:851725226081:targetgroup/Heating/f3d6cf38dbca94aa-2024030713563565860000000a",
            "port": 3000,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:851725226081:targetgroup/Heating/f3d6cf38dbca94aa",
            "target_id": "i-01a16fa1bc1561db3"
          },
          "dependencies": [
            "module.Load_balancer.aws_lb_target_group.heating_tg",
            "module.Servers.aws_instance.Heating_instance",
            "module.security.aws_security_group.allow_egress",
            "module.security.aws_security_group.allow_http",
            "module.security.aws_security_group.allow_https",
            "module.security.aws_security_group.allow_ssh",
            "module.vpc.aws_subnet.Project_public_subnets",
            "module.vpc.aws_vpc.Project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "Lighting_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-2:851725226081:targetgroup/Lighting/51876189ced42439-20240307135635593100000009",
            "port": 3000,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:851725226081:targetgroup/Lighting/51876189ced42439",
            "target_id": "i-03c980e75fa1525e8"
          },
          "dependencies": [
            "module.Load_balancer.aws_lb_target_group.lighting_tg",
            "module.Servers.aws_instance.Lighting_instance",
            "module.security.aws_security_group.allow_egress",
            "module.security.aws_security_group.allow_http",
            "module.security.aws_security_group.allow_https",
            "module.security.aws_security_group.allow_ssh",
            "module.vpc.aws_subnet.Project_public_subnets",
            "module.vpc.aws_vpc.Project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "Status_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-2:851725226081:targetgroup/Status/3179c1b42b6efead-20240307135635458500000008",
            "port": 3000,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:851725226081:targetgroup/Status/3179c1b42b6efead",
            "target_id": "i-0e749c90cef33a822"
          },
          "dependencies": [
            "module.Load_balancer.aws_lb_target_group.status_tg",
            "module.Servers.aws_instance.Status_instance",
            "module.security.aws_security_group.allow_egress",
            "module.security.aws_security_group.allow_http",
            "module.security.aws_security_group.allow_https",
            "module.security.aws_security_group.allow_ssh",
            "module.vpc.aws_subnet.Project_public_subnets",
            "module.vpc.aws_vpc.Project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Servers",
      "mode": "managed",
      "type": "aws_instance",
      "name": "Heating_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-092661c89a95fb9ad",
            "arn": "arn:aws:ec2:eu-west-2:851725226081:instance/i-01a16fa1bc1561db3",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01a16fa1bc1561db3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "key-ED25519",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-02239ea4ec17d6355",
            "private_dns": "ip-10-0-32-214.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.32.214",
            "public_dns": "ec2-13-42-53-181.eu-west-2.compute.amazonaws.com",
            "public_ip": "13.42.53.181",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-056d943af912ce3c7",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b6dec183804adc01",
            "tags": {
              "Name": "Heating"
            },
            "tags_all": {
              "Name": "Heating"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0bc1534aac60f3dc5",
              "sg-0c7394aa96648d4e1",
              "sg-0f9a7a502d12baa13",
              "sg-0fa5288f357d99992"
            ]
          },
          "dependencies": [
            "module.security.aws_security_group.allow_egress",
            "module.security.aws_security_group.allow_http",
            "module.security.aws_security_group.allow_https",
            "module.security.aws_security_group.allow_ssh",
            "module.vpc.aws_subnet.Project_public_subnets",
            "module.vpc.aws_vpc.Project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Servers",
      "mode": "managed",
      "type": "aws_instance",
      "name": "Lighting_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ca4e6c42a6f72cf3",
            "arn": "arn:aws:ec2:eu-west-2:851725226081:instance/i-03c980e75fa1525e8",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03c980e75fa1525e8",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "key-ED25519",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-05d6b515f72a7b438",
            "private_dns": "ip-10-0-16-130.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.16.130",
            "public_dns": "ec2-13-43-219-124.eu-west-2.compute.amazonaws.com",
            "public_ip": "13.43.219.124",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-06037a2e50c7a449b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04986d9ccf105c360",
            "tags": {
              "Name": "Lighting"
            },
            "tags_all": {
              "Name": "Lighting"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0bc1534aac60f3dc5",
              "sg-0c7394aa96648d4e1",
              "sg-0f9a7a502d12baa13",
              "sg-0fa5288f357d99992"
            ]
          },
          "dependencies": [
            "module.security.aws_security_group.allow_egress",
            "module.security.aws_security_group.allow_http",
            "module.security.aws_security_group.allow_https",
            "module.security.aws_security_group.allow_ssh",
            "module.vpc.aws_subnet.Project_public_subnets",
            "module.vpc.aws_vpc.Project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Servers",
      "mode": "managed",
      "type": "aws_instance",
      "name": "Status_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e42ef8215f6574d5",
            "arn": "arn:aws:ec2:eu-west-2:851725226081:instance/i-0e749c90cef33a822",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e749c90cef33a822",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "key-ED25519",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-003d45615e427ae2c",
            "private_dns": "ip-10-0-48-6.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.48.6",
            "public_dns": "ec2-3-8-96-89.eu-west-2.compute.amazonaws.com",
            "public_ip": "3.8.96.89",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-03ad3a402a8e3e8c2",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ad1b355d588880d0",
            "tags": {
              "Name": "Status"
            },
            "tags_all": {
              "Name": "Status"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0bc1534aac60f3dc5",
              "sg-0c7394aa96648d4e1",
              "sg-0f9a7a502d12baa13",
              "sg-0fa5288f357d99992"
            ]
          },
          "dependencies": [
            "module.security.aws_security_group.allow_egress",
            "module.security.aws_security_group.allow_http",
            "module.security.aws_security_group.allow_https",
            "module.security.aws_security_group.allow_ssh",
            "module.vpc.aws_subnet.Project_public_subnets",
            "module.vpc.aws_vpc.Project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Servers",
      "mode": "managed",
      "type": "aws_instance",
      "name": "auth_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-085502d28061bd806",
            "arn": "arn:aws:ec2:eu-west-2:851725226081:instance/i-0b696a85d8003011f",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b696a85d8003011f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "key-ED25519",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0426a4d0eea11fd4e",
            "private_dns": "ip-10-0-17-43.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.17.43",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0047fcb1f72f42e46",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-024aa0a3b629f9183",
            "tags": {
              "Name": "Auth"
            },
            "tags_all": {
              "Name": "Auth"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0bc1534aac60f3dc5",
              "sg-0c7394aa96648d4e1",
              "sg-0f9a7a502d12baa13",
              "sg-0fa5288f357d99992"
            ]
          },
          "dependencies": [
            "module.security.aws_security_group.allow_egress",
            "module.security.aws_security_group.allow_http",
            "module.security.aws_security_group.allow_https",
            "module.security.aws_security_group.allow_ssh",
            "module.vpc.aws_subnet.Project_private_subnets",
            "module.vpc.aws_vpc.Project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:851725226081:security-group/sg-0f9a7a502d12baa13",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f9a7a502d12baa13",
            "ingress": [],
            "name": "Allow egress",
            "name_prefix": "",
            "owner_id": "851725226081",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0878b8a97521edac1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.Project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:851725226081:security-group/sg-0c7394aa96648d4e1",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0c7394aa96648d4e1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "Allow HTTP Project",
            "name_prefix": "",
            "owner_id": "851725226081",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0878b8a97521edac1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.Project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:851725226081:security-group/sg-0fa5288f357d99992",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0fa5288f357d99992",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "Allow HTTPS project",
            "name_prefix": "",
            "owner_id": "851725226081",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0878b8a97521edac1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.Project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:851725226081:security-group/sg-0bc1534aac60f3dc5",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0bc1534aac60f3dc5",
            "ingress": [
              {
                "cidr_blocks": [
                  "213.1.5.25/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Allow ssh",
            "name_prefix": "",
            "owner_id": "851725226081",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0878b8a97521edac1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.Project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-3323325194",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0f9a7a502d12baa13",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security.aws_security_group.allow_egress",
            "module.vpc.aws_vpc.Project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_http_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-3281000729",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0c7394aa96648d4e1",
            "security_group_rule_id": "sgr-01cab09b78bbb5dfd",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security.aws_security_group.allow_http",
            "module.vpc.aws_vpc.Project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_https_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 443,
            "id": "sgrule-68428810",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0fa5288f357d99992",
            "security_group_rule_id": "sgr-061f7fb579a51c345",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security.aws_security_group.allow_https",
            "module.vpc.aws_vpc.Project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "213.1.5.25/32"
            ],
            "description": "",
            "from_port": 22,
            "id": "sgrule-2697960800",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0bc1534aac60f3dc5",
            "security_group_rule_id": "sgr-0600322b04616548c",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security.aws_security_group.allow_ssh",
            "module.security.data.http.myipaddr",
            "module.vpc.aws_vpc.Project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "Project_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06beb46712bc55efe",
            "association_id": "eipassoc-0c762b3bb5eff695b",
            "domain": "vpc",
            "id": "eipalloc-06beb46712bc55efe",
            "network_border_group": "eu-west-2",
            "network_interface": "eni-07a116f1197f21abc",
            "private_dns": "ip-10-0-48-36.eu-west-2.compute.internal",
            "private_ip": "10.0.48.36",
            "public_dns": "ec2-18-132-158-233.eu-west-2.compute.amazonaws.com",
            "public_ip": "18.132.158.233",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "Project_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:851725226081:internet-gateway/igw-00253b9ab813f6160",
            "id": "igw-00253b9ab813f6160",
            "owner_id": "851725226081",
            "vpc_id": "vpc-0878b8a97521edac1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.Project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "Project_ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06beb46712bc55efe",
            "association_id": "eipassoc-0c762b3bb5eff695b",
            "connectivity_type": "public",
            "id": "nat-0128d3260ae95879e",
            "network_interface_id": "eni-07a116f1197f21abc",
            "private_ip": "10.0.48.36",
            "public_ip": "18.132.158.233",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0ad1b355d588880d0"
          },
          "dependencies": [
            "module.vpc.aws_eip.Project_eip",
            "module.vpc.aws_internet_gateway.Project_igw",
            "module.vpc.aws_subnet.Project_public_subnets",
            "module.vpc.aws_vpc.Project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:851725226081:route-table/rtb-05203ac6c36ba5e7f",
            "id": "rtb-05203ac6c36ba5e7f",
            "owner_id": "851725226081",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0128d3260ae95879e",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private Route"
            },
            "tags_all": {
              "Name": "Private Route"
            },
            "timeouts": null,
            "vpc_id": "vpc-0878b8a97521edac1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.Project_eip",
            "module.vpc.aws_internet_gateway.Project_igw",
            "module.vpc.aws_nat_gateway.Project_ngw",
            "module.vpc.aws_subnet.Project_public_subnets",
            "module.vpc.aws_vpc.Project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:851725226081:route-table/rtb-027b2ea34489aef67",
            "id": "rtb-027b2ea34489aef67",
            "owner_id": "851725226081",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00253b9ab813f6160",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public Route"
            },
            "tags_all": {
              "Name": "Public Route"
            },
            "timeouts": null,
            "vpc_id": "vpc-0878b8a97521edac1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.Project_igw",
            "module.vpc.aws_vpc.Project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b5fb012e8ff26774",
            "route_table_id": "rtb-05203ac6c36ba5e7f",
            "subnet_id": "subnet-024aa0a3b629f9183"
          },
          "dependencies": [
            "module.vpc.aws_eip.Project_eip",
            "module.vpc.aws_internet_gateway.Project_igw",
            "module.vpc.aws_nat_gateway.Project_ngw",
            "module.vpc.aws_route_table.Private",
            "module.vpc.aws_subnet.Project_private_subnets",
            "module.vpc.aws_subnet.Project_public_subnets",
            "module.vpc.aws_vpc.Project_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06dff13fc111b3267",
            "route_table_id": "rtb-05203ac6c36ba5e7f",
            "subnet_id": "subnet-0abbf7986e6f2279c"
          },
          "dependencies": [
            "module.vpc.aws_eip.Project_eip",
            "module.vpc.aws_internet_gateway.Project_igw",
            "module.vpc.aws_nat_gateway.Project_ngw",
            "module.vpc.aws_route_table.Private",
            "module.vpc.aws_subnet.Project_private_subnets",
            "module.vpc.aws_subnet.Project_public_subnets",
            "module.vpc.aws_vpc.Project_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ef8f242a2e0f6622",
            "route_table_id": "rtb-05203ac6c36ba5e7f",
            "subnet_id": "subnet-0da7a3b87880e2796"
          },
          "dependencies": [
            "module.vpc.aws_eip.Project_eip",
            "module.vpc.aws_internet_gateway.Project_igw",
            "module.vpc.aws_nat_gateway.Project_ngw",
            "module.vpc.aws_route_table.Private",
            "module.vpc.aws_subnet.Project_private_subnets",
            "module.vpc.aws_subnet.Project_public_subnets",
            "module.vpc.aws_vpc.Project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-001d2f9e9237974ed",
            "route_table_id": "rtb-027b2ea34489aef67",
            "subnet_id": "subnet-04986d9ccf105c360"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.Project_igw",
            "module.vpc.aws_route_table.Public",
            "module.vpc.aws_subnet.Project_public_subnets",
            "module.vpc.aws_vpc.Project_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0197d3b62cef663be",
            "route_table_id": "rtb-027b2ea34489aef67",
            "subnet_id": "subnet-0b6dec183804adc01"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.Project_igw",
            "module.vpc.aws_route_table.Public",
            "module.vpc.aws_subnet.Project_public_subnets",
            "module.vpc.aws_vpc.Project_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01d2fc4bfadc42f4a",
            "route_table_id": "rtb-027b2ea34489aef67",
            "subnet_id": "subnet-0ad1b355d588880d0"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.Project_igw",
            "module.vpc.aws_route_table.Public",
            "module.vpc.aws_subnet.Project_public_subnets",
            "module.vpc.aws_vpc.Project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Project_private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:851725226081:subnet/subnet-024aa0a3b629f9183",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.17.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-024aa0a3b629f9183",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "851725226081",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Subnet 0"
            },
            "tags_all": {
              "Name": "Private Subnet 0"
            },
            "vpc_id": "vpc-0878b8a97521edac1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.Project_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:851725226081:subnet/subnet-0abbf7986e6f2279c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.33.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0abbf7986e6f2279c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "851725226081",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Subnet 1"
            },
            "tags_all": {
              "Name": "Private Subnet 1"
            },
            "vpc_id": "vpc-0878b8a97521edac1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.Project_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:851725226081:subnet/subnet-0da7a3b87880e2796",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "10.0.49.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0da7a3b87880e2796",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "851725226081",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Subnet 2"
            },
            "tags_all": {
              "Name": "Private Subnet 2"
            },
            "vpc_id": "vpc-0878b8a97521edac1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.Project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Project_public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:851725226081:subnet/subnet-04986d9ccf105c360",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.16.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04986d9ccf105c360",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "851725226081",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public Subnet 0"
            },
            "tags_all": {
              "Name": "Public Subnet 0"
            },
            "vpc_id": "vpc-0878b8a97521edac1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.Project_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:851725226081:subnet/subnet-0b6dec183804adc01",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.32.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b6dec183804adc01",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "851725226081",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public Subnet 1"
            },
            "tags_all": {
              "Name": "Public Subnet 1"
            },
            "vpc_id": "vpc-0878b8a97521edac1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.Project_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:851725226081:subnet/subnet-0ad1b355d588880d0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "10.0.48.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ad1b355d588880d0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "851725226081",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public Subnet 2"
            },
            "tags_all": {
              "Name": "Public Subnet 2"
            },
            "vpc_id": "vpc-0878b8a97521edac1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.Project_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "Project_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:851725226081:vpc/vpc-0878b8a97521edac1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06e318a3560370c93",
            "default_route_table_id": "rtb-0c1dbef5b79d9a3fa",
            "default_security_group_id": "sg-0fdf1b24e18232ab3",
            "dhcp_options_id": "dopt-0e2bec50da22584dc",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0878b8a97521edac1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c1dbef5b79d9a3fa",
            "owner_id": "851725226081",
            "tags": {
              "Name": "Terraform Project"
            },
            "tags_all": {
              "Name": "Terraform Project"
            }
          }
        }
      ]
    }
  ]
}